fixed content not fitting on screen

--- a/index.css
+++ b/index.css
@@ -8,12 +8,16 @@ body {
     color: black;
     width: 100vw;
     height: 100vh;
+    overflow: auto;
+    flex-direction: column  ;
 }
 
 .demo-wrap {
     position: relative;
     display: inline-block;
-
+    max-width: 100%;
+    max-height: 100%;
+    overflow: auto; /* Allow scrolling if content exceeds bounds */
 }
 
 #background-img {
@@ -27,7 +31,7 @@ body {
 h4 {
     margin-bottom: 20px;
     margin-top: 0px;
-    font-size: 30px;
+    font-size: 2rem;
 }
 
 #label {
@@ -38,21 +42,21 @@ h1 {
     color: #403e3d;
     margin-top: 50px;
     margin-bottom: 10px;
-    font-size: 70px;
+    font-size: 3rem;
 }
 
 #rezultat {
-    font-size: 100px;
+    font-size: 4rem;
 }
 
 h2 {
-    font-size: 70px;
+    font-size: 2rem;
     margin-top: 30px;
     margin-bottom: 0px;
 }
 
 h3 {
-    font-size: 50px;
+    font-size: 1.5rem;
     color: rgb(225, 240, 20);
     text-shadow: 0 0 1px black;
     margin: 10 0;
